added prestart command to package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5"
   },
   "scripts": {
+    "prestart": "npm run json-server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
